syntax = "proto3";

service BikeServiceGrpc {
  rpc GetBikeIdsOfManager (GetBikeIdsRequest) returns (GetBikeIdsResponse);
  rpc GetManagerEmailsOfBikeId (GetManagerEmailsRequest) returns (GetManagerEmailsResponse);
  rpc GetBikeStationNameById(GetBikeStationNameByIdRequest) returns (GetBikeStationNameByIdResponse);
  rpc GetBikeStationByCodeOrId(GetBikeStationByCodeOrIdRequest) returns (GetBikeStationByCodeOrIdResponse);
  rpc GetBikeStatus(GetBikeStatusRequest) returns (GetBikeStatusResponse);
}

message GetBikeStatusRequest {
  int32 bikeId = 1;
}

message GetBikeStatusResponse {
  string status = 1;
}

message GetBikeIdsRequest {
  string managerEmail = 1;
}

message GetBikeIdsResponse {
  repeated int32 bikeIds = 1;
}

message GetManagerEmailsRequest {
  int32 bikeId = 1;
}

message GetManagerEmailsResponse {
  repeated string managerEmails = 1;
}

message GetBikeStationNameByIdRequest{
  int32 id = 1;
}

message GetBikeStationNameByIdResponse{
  string name = 1;
}

message GetBikeStationByCodeOrIdRequest {
  string code = 1;
  int32 id = 2;
}

message GetBikeStationByCodeOrIdResponse {
  int32 id = 1;
  string code = 2;
  string name = 3;
  double longitude = 4;
  double latitude = 5;
}
